Changed font size

--- a/src/app/widgets/current-time/current-time.component.scss
+++ b/src/app/widgets/current-time/current-time.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-flow: column;
-  font-size: 5rem;
+  font-size: 10vmin;
   height: 100vh;
   justify-content: center;
   font-weight: 300;
