Added weather service

--- a/src/app/widgets/weather/weather.component.html
+++ b/src/app/widgets/weather/weather.component.html
@@ -1,4 +1,4 @@
 <div class="main-weather">
-  <div class="weather-icon"><img src="https://openweathermap.org/img/w/01d.png"/></div>
-  <div class="temperature">71&deg;</div>
+  <div class="weather-icon"><img [src]="currentIcon"/></div>
+  <div class="temperature">{{currentTemp}}&deg;</div>
 </div>
